--- a/src/themes/material/modules/_tab.scss
+++ b/src/themes/material/modules/_tab.scss
@@ -1,25 +1,12 @@
-igx-tab {
-    .igx-tab-inner {
-        display: none;
-        overflow: auto;
-        &.selected {
-            display: block;
+@include b(igx-tab-bar) {
+    
+    @include e(panel) {
+        @extend %igx-tab-panel;
+
+        @include m(selected) {
+            @extend %igx-tab-panel;
+            @extend %igx-tab-panel--selected;
         }
-        &::-webkit-scrollbar {
-            display: none;
-        }
-    }
-}
-
-@include b(igx-tab-bar-inner) {
-    @extend %igx-tabbar-inner-display;
-
-    @include b(tab-icon) {
-        @extend %igx-tab-icon;
-    }
-
-    @include b(tab-label) {
-        @extend %igx-tab-label;
     }
 
     @include e(menu) {
@@ -27,6 +14,14 @@ igx-tab {
 
         @include e(item, true) {
             @extend %igx-tabbar-menu-item;
+
+            @include b(tab-icon) {
+                @extend %igx-tab-icon;
+            }
+
+            @include b(tab-label) {
+                @extend %igx-tab-label;
+            }
 
             @include m(selected) {
 
@@ -45,16 +40,15 @@ igx-tab {
         }
 
         @include m(top) {
+            @extend %igx-tabbar-menu;
             @extend %igx-tabbar-menu--top;
         }
 
         @include m(bottom) {
+            @extend %igx-tabbar-menu;
             @extend %igx-tabbar-menu--bottom;
         }
     }
+    
 }
-
-@keyframes selected {
-	from {transform:scale(0) }
-	to { transform:scale(44.5) }
-}
+    
