Remove alignment of tabbar and related code, adapt tests and README

--- a/demos/app/tabbar/sample.component.html
+++ b/demos/app/tabbar/sample.component.html
@@ -1,5 +1,5 @@
 <h3>TabBar</h3>
-<igx-tab-bar alignment="bottom">
+<igx-tab-bar>
     <igx-tab-panel label="Tab 1" icon="library_music">
     <h1>Tab 1 Content</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius sapien ligula. Donec consectetur accumsan suscipit. Praesent rutrum tellus blandit bibendum cursus. Vestibulum urna arcu, bibendum nec molestie ac, varius congue massa. Mauris porttitor viverra lacus. Donec efficitur purus id urna dapibus, vitae pharetra orci pellentesque. Vestibulum id lacus a magna euismod volutpat id in mi. Etiam a nunc ut tellus dictum porta. Donec in ligula a arcu sollicitudin finibus. Vivamus id lorem pulvinar, accumsan justo vitae, vehicula diam. Mauris vel quam at velit venenatis vulputate in quis nisl.</p>
@@ -11,7 +11,6 @@
     <igx-tab-panel label="Tab 3" icon="library_books"  src="template.html">
     <a routerLink="/custom-path" routerLinkActive="active">CustomTemplateLink</a>
     <!--<h1>Tab 3 Content</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vitae malesuada odio. Praesent ante lectus, porta a eleifend vel, sodales eu nisl.</p>-->
-    
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vitae malesuada odio. Praesent ante lectus, porta a eleifend vel, sodales eu nisl.</p>-->    
     </igx-tab-panel>
 </igx-tab-bar>
