--- a/src/tabbar/tab-bar-content.component.html
+++ b/src/tabbar/tab-bar-content.component.html
@@ -1,7 +1,7 @@
 <div>
     <ng-content></ng-content>
 </div>	
-<div class="{{_itemStyle}}__menu {{_itemStyle}}__menu--{{alignment}}" role="tablist" aria-orientation="horizontal">
+<div #tablist class="{{_itemStyle}}__menu {{_itemStyle}}__menu--bottom" role="tablist" aria-orientation="horizontal">
     <igx-tab *ngFor="let panel of panels"
              [id]="'igx-tab-' + panel.index"
              [attr.aria-label]= "panel.label"
