--- a/src/range/range.component.html
+++ b/src/range/range.component.html
@@ -1,18 +1,18 @@
 <div class="igx-range"
      #range
-     (panstart)="panStart($event)"
-     (panend)="panEnd($event)"
+     (panstart)="update($event)"
+     (panend)="update($event)"
      (pan)="update($event)"
      (tap)="update($event)">
     <div class="igx-range__track">
         <div #track class="igx-range__track-fill"></div>
     </div>
     <div class="igx-range__thumbs">
-        <div *ngIf="isMulti" class="igx-range__thumb-from" [ngClass]="{ 'active': isActiveLabel }" #thumbFrom>
+        <div *ngIf="isMulti" class="igx-range__thumb-from" [ngClass]="{ 'igx-range__thumb-from--active': isActiveLabel }" #thumbFrom>
             <span class="label">{{ formatValue(lowerValue) }}</span>
             <span class="dot"></span>
         </div>
-        <div class="igx-range__thumb-to" [ngClass]="{ 'active': isActiveLabel }" #thumbTo>
+        <div class="igx-range__thumb-to" [ngClass]="{ 'igx-range__thumb-to--active': isActiveLabel }" #thumbTo>
             <span class="label">{{ formatValue(upperValue) }}</span>
             <span class="dot"></span>
         </div>
