--- a/src/range/range.component.html
+++ b/src/range/range.component.html
@@ -6,6 +6,7 @@
      (tap)="update($event)">
     <div class="igx-range__track">
         <div #track class="igx-range__track-fill"></div>
+        <div #ticks class="igx-range__track-ticks"></div>
     </div>
     <div class="igx-range__thumbs">
         <div *ngIf="isMulti" class="igx-range__thumb-from" [ngClass]="{ 'igx-range__thumb-from--active': isActiveLabel }" #thumbFrom>
