--- a/src/themes/material/_config.scss
+++ b/src/themes/material/_config.scss
@@ -315,11 +315,10 @@ $range-height: 48px;
 
 // Range Track
 $range-track-color: rgba(0,0,0,.32);
-$range-track-fill-color: $secondary-color;
+$range-track-fill-color: $primary-color;
 $range-track-height: 2px;
 
 // Range Ticks
-$range-tick-height: 2px;
 $range-tick-color: $white;
 
 // Range Thumb
