--- a/demos/app/buttonGroup/sample.component.html
+++ b/demos/app/buttonGroup/sample.component.html
@@ -1,18 +1,32 @@
-<span>Multiple Selection</span>
-<div style="margin: 20px;">
-    <igx-buttongroup [multiSelection]="multi" [values]="buttons" disabled=true>
-    </igx-buttongroup>
-</div><br />
-<span>Single Selection</span>
-<div style="margin: 20px;">
-    <igx-buttongroup [multiSelection]="!multi" [values]="buttons" (onUnselect)="onSelect($event)" (onSelect)="onSelect($event)">
-    </igx-buttongroup>
-</div><br />
-<span>Vertical alignment</span>
-<div style="margin: 20px;">
-    <igx-buttongroup multiSelection="false" [values]="buttons" [alignment]="alignment">
-    </igx-buttongroup>
-</div><br />
-<!--<button type="button" igxButton="fab" igxButtonColor="#484848" igxButtonBackground="white" igxRipple="#484848">
-    <i class="material-icons">edit</i>
-</button>-->
+<section class="container">
+    <article class="sample">
+        <h4>Exclusive Selection | Horizontal</h4>
+        <igx-buttongroup [multiSelection]="!multi" [values]="alignOptions" (onUnselect)="onSelect($event)" (onSelect)="onSelect($event)">
+        </igx-buttongroup>
+    </article>
+
+    <article class="sample">
+        <h4>Multiple Selection | Horizontal</h4>
+        <igx-buttongroup [multiSelection]="multi" [values]="fontOptions" [disabled]="false">
+        </igx-buttongroup>
+    </article>
+
+    <article class="sample">
+        <h4>Multiple Selection | Horizontal Disabled</h4>
+        <igx-buttongroup [multiSelection]="multi" [values]="fontOptions" [disabled]="true">
+        </igx-buttongroup>
+    </article>
+
+    <article class="sample">
+        <h4>Exclusive Selection | Vertical</h4>
+        <igx-buttongroup [multiSelection]="false" [values]="cities" [alignment]="alignment">
+        </igx-buttongroup>
+    </article>
+
+    <article class="sample">
+        <h4>Mutliple Selection | Vertical</h4>
+        <igx-buttongroup [multiSelection]="true" [values]="borders" [alignment]="alignment">
+        </igx-buttongroup>
+    </article>
+
+</section>
