--- a/src/buttonGroup/buttongroup-content.component.html
+++ b/src/buttonGroup/buttongroup-content.component.html
@@ -1,16 +1,21 @@
-<div class="igx-button-group" role="group">
-    <button *ngFor="let button of values; let i = 'index'" type="button"
+<div class="igx-button-group" role="group"
+[class.igx-button-group--vertical]="_isVertical"
+[class.igx-button-group--disabled]="_isDisabled">
+
+    <span class="igx-button-group__item" *ngFor="let button of values; let i = 'index'" type="button"
         (click)="_clickHandler($event, i)"
+        igxButton="flat"
         [attr.data-selected]="button.selected"
-        [disabled]="button.disabled"
-        [igxButton]="button.type"
+        [disabled]="disabled || button.disabled"
         [igxButtonColor]="button.color"
         [igxButtonBackground]="button.bgcolor"
         [igxLabel]="button.label"
         [igxRipple]="button.ripple"
-        [class.igx-button--selected]="selectedIndexes.indexOf(i) != -1">
-            {{button.label}}
+        [class.igx-button-group__item--selected]="selectedIndexes.indexOf(i) != -1">
+        <div class="igx-button-group__item-content">
             <i *ngIf="button.icon" class="material-icons">{{button.icon}}</i>
-    </button>
-    <ng-content></ng-content>
+            <span *ngIf="button.label">{{button.label}}</span>
+        </div>
+    </span>
+    
 </div>
