Each panel for sorting, filtering and paging are in separate files

--- a/demos/app/data-operations/sample.component.html
+++ b/demos/app/data-operations/sample.component.html
@@ -12,7 +12,7 @@
     <!--Remote data-->
     <igx-tab-panel label="Remote Data">
         <igx-toast #toast></igx-toast>
-        <h4>Remote DataSource</h4>
+        <h4>Remote Data</h4>
         <data-state-configurator 
             [hidePaging]="true" 
             [hideFiltering]="true" 
