--- a/src/toast/toast.component.html
+++ b/src/toast/toast.component.html
@@ -1,3 +1,3 @@
-<div [ngClass]="_mapPositionToClassName(position)" *ngIf="this.isVisible" [@animate]="'show'">
+<div [ngClass]="mapPositionToClassName(position)" *ngIf="this.isVisible" [@animate]="'show'">
     {{ message }}
 </div>
