Updated snackbar.component to be auto hidden with setTimeout instead of setInterval and removed underscore from private methods names and fixed quotes

--- a/src/snackbar/snackbar.component.html
+++ b/src/snackbar/snackbar.component.html
@@ -5,7 +5,7 @@
 >
     <span class="igx-snackbar__message" [@fadeInOut]>{{ message }}</span>
     <button class="igx-snackbar__button" igxRipple="white" *ngIf="actionText" [@fadeInOut]
-        (click)="_triggerAction(snackbar)">
+        (click)="triggerAction(snackbar)">
             {{ actionText }}
     </button>
 </div>
