added togglable option and custom css class input

--- a/demos/app/buttonGroup/sample.component.html
+++ b/demos/app/buttonGroup/sample.component.html
@@ -29,4 +29,11 @@
         </igx-buttongroup>
     </article>
 
+    
+    <article class="sample">
+        <h4>Custom class to style the content</h4>
+        <igx-buttongroup [multiSelection]="multi" [values]="fontOptions" [disabled]="false" itemContentCssClass="customContentStyle">
+        </igx-buttongroup>
+    </article>
+
 </section>
