--- a/src/grid/grid.component.html
+++ b/src/grid/grid.component.html
@@ -10,28 +10,13 @@
                     [igxDraggable]="col.index"
                     [igxDroppable]="col.index"
                     [igxColumnSorting]="col"
-                    *ngIf="col.headerTemplate" [style.width]="col.width || ''">
-                    <igx-cell-header [column]="col" [colIndex]="index"></igx-cell-header>
+                    [style.width]="col.width || ''">
+                    <igx-cell-header *ngIf="col.headerTemplate" [column]="col" [colIndex]="index"></igx-cell-header>
+                    {{ formatHeader(col) }}
                     <igx-col-filter
                         (onFilter)="processFilter($event)"
                         *ngIf="col.filtering"
                         [value]="filteringExpressions[col.field]?.searchVal || ''"
-                        [column]="col">
-                    </igx-col-filter>
-                </th>
-                <th (onSort)="processSort($event)"
-                    role="columnheader" tabindex="0"
-                    class="igx-grid__th"
-                    [attr.aria-label]="col.header || col.field"
-                    (onDrop)="moveColumn($event)"
-                    [igxDraggable]="col.index"
-                    [igxDroppable]="col.index"
-                    [igxColumnSorting]="col"
-                    *ngIf="!col.headerTemplate" [style.width]="col.width || ''">
-                    {{ col.header || col.field }}
-                    <igx-col-filter
-                        (onFilter)="processFilter($event)"
-                        *ngIf="col.filtering" [value]="filteringExpressions[col.field]?.searchVal || ''"
                         [column]="col">
                     </igx-col-filter>
                 </th>
@@ -48,22 +33,13 @@
                     <td tabindex="0" role="gridcell" [attr.aria-readonly]="!col.editable" [attr.aria-describedby]="id + '_' + col.field"
                         [attr.data-row]="rowIndex" [attr.data-col]="colIndex"
                         class="igx-grid__td"
-                        *ngIf="col.bodyTemplate" [style.width]="col.width || ''"
+                        [style.width]="col.width || ''"
                         (focus)="onCellFocus($event, rowIndex, col.field)"
                         (blur)="onCellBlur($event)"
                         (dblclick)="editCell(rowIndex, rowData[col.field], rowData)"
                         (keyup.enter)="editCell(rowIndex, rowData[col.field], rowData)">
-                        <igx-cell-body [column]="col" [row]="rowData" [item]="rowData[col.field]" [rowIndex]="rowIndex"></igx-cell-body>
-                    </td>
-                    <td tabindex="0" role="gridcell" [attr.aria-readonly]="!col.editable" [attr.aria-describedby]="id + '_' + col.field"
-                        [attr.data-row]="rowIndex" [attr.data-col]="colIndex"
-                        class="igx-grid__td"
-                        *ngIf="!col.bodyTemplate" [style.width]="col.width || ''"
-                        (focus)="onCellFocus($event, rowIndex, col.field)"
-                        (blur)="onCellBlur($event)"
-                        (dblclick)="editCell(rowIndex, rowData[col.field], rowData)"
-                        (keyup.enter)="editCell(rowIndex, rowData[col.field], rowData)">
-                        {{ rowData[col.field] }}
+                        <igx-cell-body *ngIf="col.bodyTemplate" [column]="col" [row]="rowData" [item]="rowData[col.field]" [rowIndex]="rowIndex"></igx-cell-body>
+                        {{ formatBody(rowData, col) }}
                     </td>
                 </template>
             </tr>
