add ARIA and bind the model

--- a/demos/app/buttonGroup/sample.component.html
+++ b/demos/app/buttonGroup/sample.component.html
@@ -4,6 +4,7 @@
         <igx-buttongroup [multiSelection]="!multi" [values]="alignOptions" (onUnselect)="onSelect($event)" (onSelect)="onSelect($event)">
         </igx-buttongroup>
     </article>
+    <h5>First button is selected: {{alignOptions[0].selected}}</h5>
 
     <article class="sample">
         <h4>Multiple Selection | Horizontal</h4>
