--- a/src/buttonGroup/buttongroup-content.component.html
+++ b/src/buttonGroup/buttongroup-content.component.html
@@ -6,12 +6,13 @@
         igxButton="flat"
         [attr.data-selected]="button.selected"
         [attr.data-togglable]="button.togglable"
+        [attr.aria-pressed]="button.selected"
         [disabled]="disabled || button.disabled"
         [igxButtonColor]="button.color"
         [igxButtonBackground]="button.bgcolor"
         [igxLabel]="button.label"
         [igxRipple]="button.ripple"
-        [class.igx-button-group__item--selected]="selectedIndexes.indexOf(i) != -1">
+        [class.igx-button-group__item--selected]="button.selected">
         <div class="igx-button-group__item-content {{ itemContentCssClass }}">
             <i *ngIf="button.icon" class="material-icons">{{button.icon}}</i>
             <span *ngIf="button.label">{{button.label}}</span>
